[gd_scene load_steps=2 format=3 uid="uid://ce7i3jq38bbot"]

[ext_resource type="Script" path="res://scripts/steam_multiplayer.gd" id="1_6m4od"]

[node name="Steam" type="Node2D"]
script = ExtResource("1_6m4od")

[node name="Panel" type="Panel" parent="."]
offset_left = 832.0
offset_right = 1152.0
offset_bottom = 192.0

[node name="AvatarPanel" type="Panel" parent="."]
offset_left = 832.0
offset_top = 216.0
offset_right = 1152.0
offset_bottom = 408.0

[node name="AvatarTexture" type="TextureRect" parent="."]
offset_left = 832.0
offset_top = 216.0
offset_right = 872.0
offset_bottom = 256.0

[node name="UsernameLabel" type="Label" parent="."]
offset_left = 896.0
offset_top = 64.0
offset_right = 1008.0
offset_bottom = 87.0
text = "My User name
"

[node name="UserLevelLabel" type="Label" parent="."]
offset_left = 896.0
offset_top = 104.0
offset_right = 1008.0
offset_bottom = 127.0
text = "My level
"

[node name="Button" type="Button" parent="."]
offset_left = 392.0
offset_top = 128.0
offset_right = 512.0
offset_bottom = 159.0
text = "Get Username"

[node name="Button2" type="Button" parent="."]
offset_left = 392.0
offset_top = 224.0
offset_right = 512.0
offset_bottom = 255.0
text = "Get Avatar L"

[node name="Button3" type="Button" parent="."]
offset_left = 392.0
offset_top = 280.0
offset_right = 512.0
offset_bottom = 311.0
text = "Get Avatar M"

[node name="Button4" type="Button" parent="."]
offset_left = 392.0
offset_top = 336.0
offset_right = 512.0
offset_bottom = 367.0
text = "Get Avatar S"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
